--- a/zeqktools/AltosTools.WindowsForms/AltosTools.WindowsForms.csproj
+++ b/zeqktools/AltosTools.WindowsForms/AltosTools.WindowsForms.csproj
@@ -157,6 +157,12 @@
   <ItemGroup>
     <None Include="Controls\PopupControl\PopupControl.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AltosTools\AltosTools.csproj">
+      <Project>{CFC9DC5B-B9FD-4B73-B3C5-8159EC8ADFC7}</Project>
+      <Name>AltosTools</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
